functional and post method working well

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: fira code, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+html{
+  scroll-behavior: smooth;
 }
